6474678 lazyload all Trusted Extensions libraries

--- a/usr/src/cmd/cmd-inet/usr.bin/netstat/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.bin/netstat/Makefile
@@ -44,9 +44,9 @@ COMMONSRCS=	$(CMDINETCOMMONDIR)/$(COMMONOBJS:%.o=%.c)
 SRCS=		$(LOCALSRCS) $(COMMONSRCS)
 
 CPPFLAGS += -DNDEBUG -I$(CMDINETCOMMONDIR)
-LAZYLIBS = $(ZLAZYLOAD) -ltsol $(ZNOLAZYLOAD)
-lint := LAZYLIBS = -ltsol
-LDLIBS += -ldhcpagent -lcmd -lsocket -lnsl -lkstat -ltsnet $(LAZYLIBS)
+LAZYLIBS = $(ZLAZYLOAD) -ltsnet -ltsol $(ZNOLAZYLOAD)
+lint := LAZYLIBS = -ltsnet -ltsol
+LDLIBS += -ldhcpagent -lcmd -lsocket -lnsl -lkstat $(LAZYLIBS)
 
 .KEEP_STATE:
 
