--- a/usr/src/uts/i86pc/drm/Makefile
+++ b/usr/src/uts/i86pc/drm/Makefile
@@ -18,18 +18,15 @@
 #
 # CDDL HEADER END
 #
+# uts/i86pc/drm/Makefile
 #
-# uts/intel/vgatext/Makefile
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-#	This makefile drives the production of the VGA text driver
-#
-#	intel implementation architecture independent
-#
-
+#	This makefile drives the production of the DRM (Direct Rendering
+#	Manager) common misc module.
 #
 #	Path to the base of the uts directory tree (usually /usr/src/uts).
 #
@@ -38,23 +35,24 @@ UTSBASE	= ../..
 #
 #	Define the module and object file sets.
 #
-MODULE		= vgatext
-OBJECTS		= $(VGATEXT_OBJS:%=$(OBJS_DIR)/%) $(OBJS_DIR)/$(VGATEXT_FONT).o
-LINTS		= $(VGATEXT_OBJS:%.o=$(LINTS_DIR)/%.ln)
-ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
-VGATEXT_FONT	= 8859-1
-VGATEXT_SRC	= $(UTSBASE)/intel/io/vgatext
+MODULE		= drm
+OBJECTS		= $(DRM_OBJS:%=$(OBJS_DIR)/%)
+LINTS		= $(DRM_OBJS:%.o=$(LINTS_DIR)/%.ln)
+DRM_SRC		= $(UTSBASE)/i86pc/io/drm
+ROOTMODULE	= $(ROOT_MISC_DIR)/$(MODULE)
+INC_PATH        += -I$(DRM_SRC)
+CMN_DRM_SRC	= $(UTSBASE)/common/io/drm
+CONF_SRCDIR     = $(UTSBASE)/common/io/drm
 
-LDFLAGS +=	-dy -Nmisc/agpmaster
 #
 #	Include common rules.
 #
-include $(UTSBASE)/intel/Makefile.intel
+include $(UTSBASE)/i86pc/Makefile.i86pc
 
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) # $(SRC_CONFILE)
+ALL_TARGET	= $(BINARY)
 LINT_TARGET	= $(MODULE).lint
 INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 
@@ -79,19 +77,7 @@ clean.lint:	$(CLEAN_LINT_DEPS)
 
 install:	$(INSTALL_DEPS)
 
-# Custom targets and rules
-
-$(OBJS_DIR)/$(VGATEXT_FONT).c:	$(VGATEXT_SRC)/$(VGATEXT_FONT).bdf
-	awk -f $(VGATEXT_SRC)/bdf_to_c.awk	\
-		$(VGATEXT_SRC)/$(VGATEXT_FONT).bdf > $@
-
-$(OBJS_DIR)/$(VGATEXT_FONT).o:	$(OBJS_DIR)/$(VGATEXT_FONT).c
-	$(COMPILE.c) -o $@ $<
-	$(CTFCONVERT_O)
-
 #
 #	Include common targets.
 #
-include $(UTSBASE)/intel/Makefile.targ
-
-CLEANFILES	+= $(OBJS_DIR)/$(VGATEXT_FONT).c
+include $(UTSBASE)/i86pc/Makefile.targ
