6469953 BrandZ makes libproc (in /lib) depend on libzonecfg (in /usr/lib) 6475890 Pfindexec() search could use improvement

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -472,8 +472,7 @@ libsldap:	libldap5 libtsol
 libpool:	libnvpair libexacct
 libzonecfg:	libc libsocket libnsl libuuid libnvpair libsysevent libsec \
 		libbrand
-libproc:	../cmd/sgs/librtld_db libzonecfg ../cmd/sgs/libelf libctf \
-		libbrand
+libproc:	../cmd/sgs/librtld_db ../cmd/sgs/libelf libctf
 libproject:	libpool libproc libsecdb
 libtsnet:	libnsl libtsol libsecdb
 libwrap:	libnsl libsocket
