--- a/usr/src/lib/efcode/efdaemon/Makefile
+++ b/usr/src/lib/efcode/efdaemon/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -41,15 +40,22 @@ EFTARGETS += $(EFCODEDIR64)/$(PROG)
 EFTARGETS += $(EFCODEDIR)/efcode.sh
 
 MFSTDIR = $(ROOT)/var/svc/manifest/platform/sun4u
+MFSTDIR_SUN4V = $(ROOT)/var/svc/manifest/platform/sun4v
 MANIFEST = efdaemon.xml
+MANIFEST_SUN4V = efdaemon_sun4v.xml
 EFTARGETS += $(MFSTDIR)/$(MANIFEST)
+EFTARGETS += $(MFSTDIR_SUN4V)/$(MANIFEST_SUN4V)
 
 $(MFSTDIR)/$(MANIFEST) := FILEMODE = 0444
+$(MFSTDIR_SUN4V)/$(MANIFEST_SUN4V) := FILEMODE = 0444
 
 all:	$(PROG)
 
 clean:
 	-$(RM) $(PROG)
+	-$(RM) $(MFSTDIR)/$(MANIFEST)
+	-$(RM) $(MFSTDIR_SUN4V)/$(MANIFEST)
+	-$(RM) $(MFSTDIR_SUN4V)/$(MANIFEST_SUN4V)
 
 $(EFCODEDIR64)/%: %
 	$(INS.file)
@@ -60,7 +66,11 @@ $(EFCODEDIR)/%.sh: %.sh
 $(MFSTDIR)/%: %
 	$(INS.file)
 
+$(MFSTDIR_SUN4V)/%: %
+	$(INS.file)
+
 install: all .WAIT $(EFTARGETS)
+	-$(MV) $(MFSTDIR_SUN4V)/$(MANIFEST_SUN4V) $(MFSTDIR_SUN4V)/$(MANIFEST)
 
 lint:	lint_PROG
 
