--- a/usr/src/cmd/fm/modules/common/eversholt/Makefile
+++ b/usr/src/cmd/fm/modules/common/eversholt/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -34,11 +33,13 @@ EVERSRCDIR=../../../eversholt/common
 
 MODULE = eft
 CLASS = common
+DMOD = $(MODULE).so
 
 YSRCS=escparse.y 
 SRCS =	alloc.c check.c config.c eft.c eftread.c esclex.c eval.c evnv.c \
 	fme.c iexpr.c io.c ipath.c itree.c lut.c literals.c out.c platform.c \
 	ptree.c stable.c stats.c tree.c
+DMOD_SRCS = eft_mdb.c
 
 include ../../Makefile.plugin
 
