--- a/usr/src/uts/i86pc/io/mc/mcamd_off.in
+++ b/usr/src/uts/i86pc/io/mc/mcamd_off.in
@@ -2,9 +2,8 @@
 \ CDDL HEADER START
 \
 \ The contents of this file are subject to the terms of the
-\ Common Development and Distribution License, Version 1.0 only
-\ (the "License").  You may not use this file except in compliance
-\ with the License.
+\ Common Development and Distribution License (the "License").
+\ You may not use this file except in compliance with the License.
 \
 \ You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 \ or http://www.opensolaris.org/os/licensing.
@@ -34,22 +33,36 @@ mc_t
 	mc_props.mcp_rev		MCAMD_MC_OFF_REV
 	mc_props.mcp_base		MCAMD_MC_OFF_BASE_ADDR
 	mc_props.mcp_lim		MCAMD_MC_OFF_LIM_ADDR
-	mc_props.mcp_dramcfg		MCAMD_MC_OFF_DRAMCFG
-	mc_props.mcp_dramhole		MCAMD_MC_OFF_DRAMHOLE
-	mc_props.mcp_ilen		MCAMD_MC_OFF_DRAM_ILEN
-	mc_props.mcp_ilsel		MCAMD_MC_OFF_DRAM_ILSEL
-	mc_props.mcp_csbankmap		MCAMD_MC_OFF_CSBANKMAP
+	mc_props.mcp_ilen		MCAMD_MC_OFF_ILEN
+	mc_props.mcp_ilsel		MCAMD_MC_OFF_ILSEL
+	mc_props.mcp_csintlvfctr	MCAMD_MC_OFF_CSINTLVFCTR
+	mc_props.mcp_dramhole_size	MCAMD_MC_OFF_DRAMHOLE_SIZE
 	mc_props.mcp_accwidth		MCAMD_MC_OFF_ACCWIDTH
-	mc_props.mcp_csbank_intlv	MCAMD_MC_OFF_CSBANK_INTLV
-	mc_props.mcp_disabled_cs	MCAMD_MC_OFF_DISABLED_CS
+	mc_props.mcp_csbankmapreg	MCAMD_MC_OFF_CSBANKMAPREG
+	mc_props.mcp_bnkswzl		MCAMD_MC_OFF_BNKSWZL
+	mc_props.mcp_mod64mux		MCAMD_MC_OFF_MOD64MUX
+	mc_props.mcp_sparecs		MCAMD_MC_OFF_SPARECS
+	mc_props.mcp_badcs		MCAMD_MC_OFF_BADCS
+	mc_cfgregs.mcr_drambase		MCAMD_MC_OFF_DRAMBASE_REG
+	mc_cfgregs.mcr_dramlimit	MCAMD_MC_OFF_DRAMLIMIT_REG
+	mc_cfgregs.mcr_dramhole		MCAMD_MC_OFF_DRAMHOLE_REG
+	mc_cfgregs.mcr_dramcfglo	MCAMD_MC_OFF_DRAMCFGLO_REG
+	mc_cfgregs.mcr_dramcfghi	MCAMD_MC_OFF_DRAMCFGHI_REG
 
 mc_cs_t
-	mccs_num		MCAMD_CS_OFF_NUM
-	mccs_base		MCAMD_CS_OFF_BASE_ADDR
-	mccs_mask		MCAMD_CS_OFF_MASK
-	mccs_size		MCAMD_CS_OFF_SIZE
-	mccs_dimmnums		MCAMD_CS_OFF_DIMMNUMS
+	mccs_props.csp_num		MCAMD_CS_OFF_NUM
+	mccs_props.csp_base		MCAMD_CS_OFF_BASE_ADDR
+	mccs_props.csp_mask		MCAMD_CS_OFF_MASK
+	mccs_props.csp_size		MCAMD_CS_OFF_SIZE
+	mccs_props.csp_csbe		MCAMD_CS_OFF_CSBE
+	mccs_props.csp_spare		MCAMD_CS_OFF_SPARE
+	mccs_props.csp_testfail		MCAMD_CS_OFF_TESTFAIL
+	mccs_props.csp_dimmnums		MCAMD_CS_OFF_DIMMNUMS
+	mccs_props.csp_dimmrank		MCAMD_CS_OFF_DIMMRANK
+	mccs_cfgregs.csr_csbase		MCAMD_CS_OFF_CSBASE_REG
+	mccs_cfgregs.csr_csmask		MCAMD_CS_OFF_CSMASK_REG
 
 mc_dimm_t
 	mcd_num			MCAMD_DIMM_OFF_NUM
+	mcd_size		MCAMD_DIMM_OFF_SIZE
 
