6473807 eversholt could use some mdb support (fix ELF runtime)

--- a/usr/src/cmd/fm/modules/Makefile.plugin
+++ b/usr/src/cmd/fm/modules/Makefile.plugin
@@ -75,10 +75,12 @@ CFLAGS += $(CTF_FLAGS) $(CCVERBOSE) $(XSTRCONST) $(CC_PICFLAGS)
 CFLAGS += -G $(XREGSFLAG) 
 
 CPPFLAGS += -D_POSIX_PTHREAD_SEMANTICS -D_REENTRANT
-$(PROG) := LDFLAGS += $(ZTEXT) $(ZCOMBRELOC) $(ZDEFS) $(ZIGNORE) -M$(APIMAP) -M$(FMRIMAP)
+LDFLAGS += $(ZTEXT) $(ZCOMBRELOC) $(ZIGNORE)
+
+$(PROG) := LDFLAGS += $(ZDEFS) -M$(APIMAP) -M$(FMRIMAP)
 $(PROG) := LDLIBS += -lnvpair -lc
 
-$(DMODPROG) := LDFLAGS += $(ZTEXT) $(ZCOMBRELOC)
+$(DMOD_PROG) := LDFLAGS += $(ZNODEFS)
 
 all: $(PROG) $(DMODPROG)
 
