--- a/usr/src/cmd/fm/modules/i86pc/sfx4500-disk/Makefile
+++ b/usr/src/cmd/fm/modules/i86pc/sfx4500-disk/Makefile
@@ -34,5 +34,5 @@ SRCS = sfx4500-disk.c diskmon_conf.c topo_gather.c \
 include ../../Makefile.plugin
 LINTFLAGS += -I. -I$(SRC)/lib/fm/topo/modules/i86pc/sata -L$(ROOT)/usr/lib/fm
 CFLAGS += -I. -I$(SRC)/lib/fm/topo/modules/i86pc/sata
-LDLIBS += -lsysevent -lnvpair -lsmbios -ldl -lcfgadm -ltopo -luutil
+LDLIBS += -lsysevent -lnvpair -lsmbios -lcfgadm -ltopo -luutil
 LDFLAGS += -L$(ROOT)/usr/lib/fm -R/usr/lib/fm
