--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -357,6 +357,7 @@ COMMON_SUBDIRS = \
 	lib/libsec \
 	lib/libsecdb \
 	lib/libsendfile \
+	lib/libsip \
 	lib/libsldap \
 	lib/libslp \
 	lib/libsmbios \
