6473807 eversholt could use some mdb support (fix typo)

--- a/usr/src/cmd/fm/modules/Makefile.plugin
+++ b/usr/src/cmd/fm/modules/Makefile.plugin
@@ -80,7 +80,7 @@ LDFLAGS += $(ZTEXT) $(ZCOMBRELOC) $(ZIGNORE)
 $(PROG) := LDFLAGS += $(ZDEFS) -M$(APIMAP) -M$(FMRIMAP)
 $(PROG) := LDLIBS += -lnvpair -lc
 
-$(DMOD_PROG) := LDFLAGS += $(ZNODEFS)
+$(DMODPROG) := LDFLAGS += $(ZNODEFS)
 
 all: $(PROG) $(DMODPROG)
 
