PSARC 2006/561 libcmd must die 6480998 libcmd must die

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -303,6 +303,7 @@ COMMON_SUBDIRS = \
 	lib/libc \
 	lib/libc_db \
 	lib/libcfgadm \
+	lib/libcmd \
 	lib/libcmdutils \
 	lib/libcontract \
 	lib/libcryptoutil \
