--- a/usr/src/cmd/cron/Makefile
+++ b/usr/src/cmd/cron/Makefile
@@ -141,7 +141,7 @@ at :=		LDLIBS += -lproject -lsecdb
 at.xpg4 :=	LDLIBS += -lproject -lsecdb
 atq :=		LDLIBS += -lsecdb
 atrm :=		LDLIBS += -lsecdb
-cron :=		LDLIBS += -lcmd -lpam -lproject -lcontract
+cron :=		LDLIBS += -lpam -lproject -lcontract
 crontab :=	LDLIBS += -lsecdb -lpam
 crontab.xpg6 :=	LDLIBS += -lsecdb -lpam
 crontab.xpg4 :=	LDLIBS += -lsecdb -lpam
