--- a/usr/src/cmd/lp/cmd/lpsched/Makefile
+++ b/usr/src/cmd/lp/cmd/lpsched/Makefile
@@ -17,14 +17,12 @@
 # information: Portions Copyright [yyyy] [name of copyright owner]
 #
 # CDDL HEADER END
-
-
 #
-#
-# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # cmd/lp/cmd/lpsched/lpsched/Makefile
 #
@@ -104,7 +102,7 @@ LPLIBS =			\
 		$(LIBSEC)
 
 SYSLIBS=	-lcurses -lgen -lcurses -lnsl -z lazyload \
-		-ltsol -lsecdb -lcmd -lbsm -z nolazyload
+		-ltsol -lsecdb -lbsm -z nolazyload
 
 LDLIBS +=	$(LPLIBS) $(SYSLIBS)
 
