--- a/usr/src/cmd/cmd-inet/usr.bin/ftp/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.bin/ftp/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -42,7 +41,7 @@ CPPFLAGS +=	-D_FILE_OFFSET_BITS=64 \
 		-I$(SRC)/lib/gss_mechs/mech_krb5/include \
 		-I$(SRC)/uts/common/gssapi/mechs/krb5/include
 
-LDLIBS +=	-lsocket -lnsl -lcmd -lgss
+LDLIBS +=	-lsocket -lnsl -lgss
 LDFLAGS +=	$(ZLAZYLOAD)
 
 .KEEP_STATE:
