--- a/usr/src/cmd/fs.d/nfs/nfslog/Makefile
+++ b/usr/src/cmd/fs.d/nfs/nfslog/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,10 +19,10 @@
 # CDDL HEADER END
 #
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # cmd/fs.d/nfs/nfslog/Makefile
 
@@ -40,7 +39,7 @@ LOCAL=		process_buffer.o fhtab.o nfslogd.o nfslog_elf.o \
 		nfs_log_xdr.o buffer_list.o
 OBJS=		$(LOCAL) $(COMMON)
 SRCS=		$(LOCAL:%.o=%.c) $(COMMON:%.o=../lib/%.c)
-LDLIBS +=	-lsocket -lnsl -lcmd
+LDLIBS +=	-lsocket -lnsl
 CFLAGS += 	$(CCVERBOSE)
 CPPFLAGS += 	-D_FILE_OFFSET_BITS=64
 
