--- a/usr/src/cmd/login/Makefile
+++ b/usr/src/cmd/login/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,10 +19,10 @@
 # CDDL HEADER END
 #
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 PROG= login
@@ -49,7 +48,7 @@ CLOBBERFILES +=	$(LOGINDEVPERM) $(ONC_SRCS)
 CPPFLAGS +=	-DSYSV -DCONSOLE='"/dev/console"' -DSECURITY \
 		-D_FILE_OFFSET_BITS=64 -I$(SRC)/lib/pam_modules/krb5
 
-LDLIBS += -lcmd -lbsm -lpam -ldevinfo
+LDLIBS += -lbsm -lpam -ldevinfo
 CFLAGS += $(CCVERBOSE)
 
 .KEEP_STATE:
