--- a/usr/src/cmd/mkpwdict/Makefile
+++ b/usr/src/cmd/mkpwdict/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -34,8 +33,6 @@ include ../Makefile.cmd
 CFLAGS += -I$(SRC)/lib/pam_modules/authtok_check
 LINTFLAGS += -erroff=E_NAME_DEF_NOT_USED2 -m 
 LINTFLAGS += -I$(SRC)/lib/pam_modules/authtok_check
-
-LDLIBS += -lcmd
 
 CRACK_SRCDIR=	$(SRC)/lib/pam_modules/authtok_check/
 CRACK_OBJS=	packer.o packlib.o dict.o stringlib.o
