6477912 /etc/hosts name lookup sporadically fail on sparks based builds 6479036 nscd/nss_nisplus.so.1 core dumps when processing a getservent request 6481313 nscd drops core during DNS resolution 6481603 Installing SUNWCrnet had complains about nscd due to missing SUNWgss/SUNWgssc

--- a/usr/src/cmd/nscd/Makefile
+++ b/usr/src/cmd/nscd/Makefile
@@ -74,7 +74,7 @@ LINTFLAGS +=	-erroff=E_NAME_DEF_NOT_USED2
 # GPROF_FLAG=	-xpg
 # DEBUG_FLAG=	-g
 
-PROGLIBS=	$(LDLIBS) -lresolv -lnsl -lsocket -lumem -lscf -lavl -lgss
+PROGLIBS=	$(LDLIBS) -lresolv -lnsl -lsocket -lumem -lscf -lavl
 NISPROGLIBS=	$(LDLIBS) -lnsl
 
 # install macros and rule
