PSARC 2006/288 zpool history 6343741 want to store a command history on disk 6476196 spa_sync_spares() is missing a nvlist_free()

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -893,6 +893,7 @@ ZFS_COMMON_OBJS +=		\
 	spa.o			\
 	spa_config.o		\
 	spa_errlog.o		\
+	spa_history.o		\
 	spa_misc.o		\
 	space_map.o		\
 	txg.o			\
