--- a/usr/src/cmd/ps/Makefile
+++ b/usr/src/cmd/ps/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # cmd/ps/Makefile
@@ -33,6 +32,8 @@ PROG= ps
 include ../Makefile.cmd
 
 XGETFLAGS += -a -x ps.xcl
+
+DCFILE= $(PROG).dc
 
 $(64ONLY)SUBDIRS= $(MACH)
 $(BUILD64)SUBDIRS += $(MACH64)
@@ -57,5 +58,12 @@ $(SUBDIRS):	FRC
 	@cd $@; pwd; $(MAKE) $(TARGET)
 
 FRC:
+
+$(DCFILE): $(PROG).c
+	$(RM) $(DCFILE)
+	$(COMPILE.cpp) $(PROG).c  | \
+	$(XGETTEXT) -c TRANSLATION_NOTE -t -
+	$(SED) -e '/^domain/d' messages.po > $@
+	$(RM) messages.po
 
 include ../Makefile.targ
