6486308 zoneadm: erroneous output when invoked in labeled zones 6486651 sn1_boot install target is missing a dependency 6486653 truss should recognize ZONE_ATTR_BRAND

--- a/usr/src/lib/brand/sn1/zone/Makefile
+++ b/usr/src/lib/brand/sn1/zone/Makefile
@@ -40,7 +40,7 @@ lint:
 clean:
 	-$(RM) $(PROGS)
 
-install: $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
+install: $(PROGS) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
 
 clobber: clean
 	-$(RM) $(ROOTPROGS) $(ROOTXMLDOCS) $(ROOTTEMPLATES)
