6485907 now that gethostbyaddr() & friends are not paranoid, rshd/rlogin must be

--- a/usr/src/cmd/cmd-inet/usr.sbin/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.sbin/Makefile
@@ -100,8 +100,8 @@ include ../Makefile.cmd-inet
 ROOTSBINPROG = $(ROOTFS_PROG:%=$(ROOTSBIN)/%)
 ROOTUSRSBINLINKS = $(SBINLINKS:%=$(ROOTUSRSBIN)/%)
 
-COMMONOBJS=	kcmd.o
-COMMONSRCS=	$(CMDINETCOMMONDIR)/$(COMMONOBJS:.o=.c)
+COMMONOBJS=	addr_match.o kcmd.o
+COMMONSRCS=	$(COMMONOBJS:%.o=$(CMDINETCOMMONDIR)/%.c)
 SRCS+=		$(COMMONSRCS)
 
 #
@@ -169,8 +169,8 @@ $(POFILE): $(POFILES)
 	$(RM) $@
 	cat $(POFILES) > $@
 
-$(COMMONOBJS): $(COMMONSRCS)
-	$(COMPILE.c) $(COMMONSRCS)
+%.o: $(CMDINETCOMMONDIR)/%.c
+	$(COMPILE.c) -o $@ $<
 
 in.rlogind: $(K5RLOGINOBJS) $(COMMONOBJS)
 	$(LINK.c) $(K5RLOGINOBJS) $(COMMONOBJS) -o $@ $(LDLIBS)
