--- a/usr/src/psm/stand/boot/sparcv9/sun4v/Makefile
+++ b/usr/src/psm/stand/boot/sparcv9/sun4v/Makefile
@@ -33,6 +33,7 @@ MODULE	= fs
 
 PLATLINKS	= SUNW,Sun-Fire-T200
 PLATLINKS	+= SUNW,Netra-CP3060
+PLATLINKS	+= SUNW,Sun-Blade-T6300
 
 LINKED_DIRS	= $(PLATLINKS:%=$(USR_PLAT_DIR)/%)
 LINKED_LIB_DIRS	= $(PLATLINKS:%=$(USR_PLAT_DIR)/%/lib)
