--- a/usr/src/uts/sun4v/Makefile.sun4v.shared
+++ b/usr/src/uts/sun4v/Makefile.sun4v.shared
@@ -35,6 +35,7 @@
 PLATFORM	 = sun4v
 LINKED_PLATFORMS += SUNW,Sun-Fire-T1000
 LINKED_PLATFORMS += SUNW,SPARC-Enterprise-T1000
+LINKED_PLATFORMS += SUNW,Sun-Blade-T6300
 PROMIF		 = ieee1275
 PSMBASE		 = $(UTSBASE)/../psm
 
