6260724 PSARC/2005/067 CPU Power Management independent of autopm 6483153 pmconfig/dtpower/sysidpm should be lint-clean

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -207,6 +207,7 @@ COMMON_SUBDIRS = \
 	cmd/picl/prtpicl \
 	cmd/plockstat \
 	cmd/pools \
+	cmd/power \
 	cmd/ppgsz \
 	cmd/praudit \
 	cmd/prctl \
